- Updated object: Red Fir Tree (rct2.scenery_small.trf)
- Updated object: Red Fir Tree (rct2.scenery_small.trf2)
- Updated object: Giraffe Statue (rct2.scenery_small.tgs)
- Updated object: Roof (rct2.scenery_small.sumrf)
- Updated object: Roman Colosseum (rct2.scenery_large.scol)
- Updated object: Roman Column (rct2.scenery_small.trc)
- Updated object: Colonnade (rct2.scenery_large.scln)
- Updated object: Bush (rct2.scenery_small.tjb1)
- Updated object: Bush (rct2.scenery_small.tjb2)
- Updated object: Bush (rct2.scenery_small.tjb3)
- Updated object: Bush (rct2.scenery_small.tjb4)
- Updated object: Plant (rct2.scenery_small.tjt6)
- Updated object: Volcano (rct2.scenery_large.svlc)
- Removed: Some redundant custom objects

2.0 (2023-02-26)
------------------------------------------------------------------------
- Fixed: Scenery groups did not properly override old DAT versions.
- New object: Candy Tree (rct2.scenery_small.tas1)
- New object: Candy Tree (rct2.scenery_small.tas2)
- New object: Candy Tree (rct2.scenery_small.tas3)
- New object: Candy (rct2.scenery_small.tas4)
- New object: Toadstool (rct2.scenery_small.tms1)
- New object: Red Meteor Crater Corner (rct2tt.scenery_large.rdmeto01)
- New object: Red Meteor Crater Corner (rct2tt.scenery_large.rdmeto02)
- New object: Red Meteor Crater Wall (rct2tt.scenery_small.rdmeto03)
- New object: Red Meteor Crater Inverted Corner (rct2tt.scenery_small.rdmeto04)
- New object: Meteor Crater Corner (rct2tt.scenery_large.metoan01)
- New object: Meteor Crater Inverted Corner (rct2tt.scenery_large.metoan02)
- New object: Large Meteor Crater (rct2tt.scenery_large.cratr4x4)
- New object: Igloo Wall (rct2ww.scenery_small.roofig01)
- New object: Igloo Wall (rct2ww.scenery_small.roofig02)
- New object: Igloo Wall (rct2ww.scenery_small.roofig03)
- New object: Igloo Wall (rct2ww.scenery_small.roofig04)
- New object: Small Geosphere (rct2ww.scenery_small.smallgeo)
- New object: Cabana Porch (rct2ww.scenery_small.sb2palm1)