@@ -15,15 +15,15 @@
             "rct2.scenery_small.tes1",
             "fidwell.scenery_small.tes1",
             "rct2.scenery_small.ten",
-            "$DAT:0C58B301|IRECTENC",
+            "fidwell.scenery_small.ten",
             "rct2.scenery_small.ters",
-            "$DAT:09F55801|TERSCRBG",
+            "fidwell.scenery_small.ters",
             "rct2.scenery_small.terb",
-            "$DAT:09F55801|TERBCRBG",
+            "fidwell.scenery_small.terb",
             "rct2.scenery_small.tep",
-            "$DAT:09F55801|TEP1    ",
+            "fidwell.scenery_small.tep",
             "rct2.scenery_wall.wew",
-            "$DAT:09F55A03|WEW1    ",
+            "fidwell.scenery_wall.wew",
             "rct2.footpath_item.lamp3",
             "rct2.footpath_banner.bn4",
             "rct2.footpath_item.benchstn"
