@@ -1,0 +1,45 @@
+{
+    "id": "fidwell.scenery_small.tep",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "originalId": "09F55801|TEP1    |AD028CFE",
+    "sourceGame": "custom",
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 8,
+        "removalPrice": -5,
+        "cursor": "CURSOR_STATUE_DOWN",
+        "height": 32,
+        "shape": "1/4",
+        "isStackable": true,
+        "hasPrimaryColour": true
+    },
+    "images": [
+      { "path": "images/0.png", "x": -11, "y": -41 },
+      { "path": "images/1.png", "x": -11, "y": -41 },
+      { "path": "images/2.png", "x": -11, "y": -41 },
+      { "path": "images/3.png", "x": -11, "y": -41 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Egyptian Column",
+            "fr-FR": "Colonne égyptienne",
+            "de-DE": "Ägyptsiche Säule",
+            "es-ES": "Columna egipcia",
+            "it-IT": "Colonna egiziana",
+            "nl-NL": "Egyptische zuil",
+            "sv-SE": "Egyptisk pelare",
+            "ko-KR": "이집트식 기둥",
+            "zh-CN": "古埃及柱廊",
+            "zh-TW": "古埃及柱廊",
+            "pt-BR": "Coluna Egípcia",
+            "cs-CZ": "Egyptský sloup",
+            "ja-JP": "エジプト風の柱",
+            "pl-PL": "Kolumna egipska",
+            "ru-RU": "Колонна",
+            "eo-ZZ": "Egipta Kolono",
+            "ca-ES": "Columna egípcia",
+            "fi-FI": "Egyptiläinen pylväs"
+        }
+    }
+}
