@@ -1,0 +1,47 @@
+{
+    "id": "fidwell.scenery_small.ters",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "originalId": "09F55801|TERSCRBG|A5BE5E66",
+    "sourceGame": "custom",
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 5,
+        "removalPrice": -5,
+        "cursor": "CURSOR_STATUE_DOWN",
+        "height": 8,
+        "shape": "1/4",
+        "requiresFlatSurface": true,
+        "isRotatable": true,
+        "isStackable": true,
+        "hasPrimaryColour": true
+    },
+    "images": [
+      { "path": "images/0.png", "x": -15, "y": -13 },
+      { "path": "images/1.png", "x": -15, "y": -15 },
+      { "path": "images/2.png", "x": -14, "y": -13 },
+      { "path": "images/3.png", "x": -15, "y": -11 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Ruined Statue",
+            "fr-FR": "Statue en ruines",
+            "de-DE": "Zerstörte Statue",
+            "es-ES": "Estatua rota",
+            "it-IT": "Statua rovinata",
+            "nl-NL": "Vervallen beeld",
+            "sv-SE": "Förstörd staty",
+            "ko-KR": "부서진 동상",
+            "zh-CN": "毁坏的雕像",
+            "zh-TW": "毀壞的雕像",
+            "pt-BR": "Estátua em Ruínas",
+            "cs-CZ": "Rozbitá socha",
+            "ja-JP": "壊れた像",
+            "pl-PL": "Zniszczony posąg",
+            "ru-RU": "Статуя",
+            "eo-ZZ": "Rompita Statuo",
+            "ca-ES": "Estàtua en ruïnes",
+            "fi-FI": "Tuhoutunut patsas"
+        }
+    }
+}
