@@ -1,0 +1,45 @@
+{
+    "id": "fidwell.scenery_wall.wew",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "originalId": "09F55A03|WEW1    |1A8448CC",
+    "sourceGame": "custom",
+    "objectType": "scenery_wall",
+    "properties": {
+        "isAllowedOnSlope": true,
+        "height": 2,
+        "price": 50,
+        "sceneryGroup": "fidwell.scenery_group.fences_dkso",
+        "hasPrimaryColour": true
+    },
+    "images": [
+      { "path": "images/0.png", "x": -34, "y": -18 },
+      { "path": "images/1.png", "x": -1, "y": -17 },
+      { "path": "images/2.png", "x": -34, "y": -33 },
+      { "path": "images/3.png", "x": -1, "y": -33 },
+      { "path": "images/4.png", "x": -35, "y": -18 },
+      { "path": "images/5.png", "x": -1, "y": -17 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Egyptian Wall",
+            "fr-FR": "Mur égyptien",
+            "de-DE": "Ägyptische Mauer",
+            "es-ES": "Pared egipcia",
+            "it-IT": "Muro egiziano",
+            "nl-NL": "Egyptische muur",
+            "sv-SE": "Egyptisk vägg",
+            "ko-KR": "이집트 벽",
+            "zh-CN": "埃及的墙",
+            "zh-TW": "埃及的牆",
+            "pt-BR": "Muro Egípcio",
+            "cs-CZ": "Egyptská stěna",
+            "ja-JP": "エジプト風の壁",
+            "pl-PL": "Ściana egipska",
+            "ru-RU": "Стена",
+            "eo-ZZ": "Egipta Muro",
+            "ca-ES": "Paret egípcia",
+            "fi-FI": "Egyptiläinen seinä"
+        }
+    }
+}
