@@ -78,6 +78,11 @@
 - Updated object: Roman Colosseum (rct2.scenery_large.scol)
 - Updated object: Roman Column (rct2.scenery_small.trc)
 - Updated object: Colonnade (rct2.scenery_large.scln)
+- Updated object: Cleopatra's Needle (rct2.scenery_small.ten)
+- Updated object: Ruined Statue (rct2.scenery_small.ters)
+- Updated object: Stone Block (rct2.scenery_small.terb)
+- Updated object: Egyptian Column (rct2.scenery_small.tep)
+- Updated object: Egyptian Wall (rct2.scenery_wall.wew)
 - Updated object: Bush (rct2.scenery_small.tjb1)
 - Updated object: Bush (rct2.scenery_small.tjb2)
 - Updated object: Bush (rct2.scenery_small.tjb3)
